APIs/googleapis.com/androidpublisher/v3/javascript-client/docs/ProductPurchase.md
# GooglePlayAndroidDeveloperApi.ProductPurchase

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**acknowledgementState** | **Number** | The acknowledgement state of the inapp product. Possible values are: 0. Yet to be acknowledged 1. Acknowledged | [optional] 
**consumptionState** | **Number** | The consumption state of the inapp product. Possible values are: 0. Yet to be consumed 1. Consumed | [optional] 
**developerPayload** | **String** | A developer-specified string that contains supplemental information about an order. | [optional] 
**kind** | **String** | This kind represents an inappPurchase object in the androidpublisher service. | [optional] 
**obfuscatedExternalAccountId** | **String** | An obfuscated version of the id that is uniquely associated with the user&#39;s account in your app. Only present if specified using https://developer.android.com/reference/com/android/billingclient/api/BillingFlowParams.Builder#setobfuscatedaccountid when the purchase was made. | [optional] 
**obfuscatedExternalProfileId** | **String** | An obfuscated version of the id that is uniquely associated with the user&#39;s profile in your app. Only present if specified using https://developer.android.com/reference/com/android/billingclient/api/BillingFlowParams.Builder#setobfuscatedprofileid when the purchase was made. | [optional] 
**orderId** | **String** | The order id associated with the purchase of the inapp product. | [optional] 
**productId** | **String** | The inapp product SKU. May not be present. | [optional] 
**purchaseState** | **Number** | The purchase state of the order. Possible values are: 0. Purchased 1. Canceled 2. Pending | [optional] 
**purchaseTimeMillis** | **String** | The time the product was purchased, in milliseconds since the epoch (Jan 1, 1970). | [optional] 
**purchaseToken** | **String** | The purchase token generated to identify this purchase. May not be present. | [optional] 
**purchaseType** | **Number** | The type of purchase of the inapp product. This field is only set if this purchase was not made using the standard in-app billing flow. Possible values are: 0. Test (i.e. purchased from a license testing account) 1. Promo (i.e. purchased using a promo code) 2. Rewarded (i.e. from watching a video ad instead of paying) | [optional] 
**quantity** | **Number** | The quantity associated with the purchase of the inapp product. If not present, the quantity is 1. | [optional] 
**regionCode** | **String** | ISO 3166-1 alpha-2 billing region code of the user at the time the product was granted. | [optional] 


